# razorbill

./: Cargo.toml  README.md
crates/auk/: Cargo.toml  README.md
crates/auk/src/: lib.rs
crates/razorbill/: Cargo.toml  README.md
crates/razorbill/src/: content.rs  date.rs  feed.rs  html.rs  lib.rs  markdown.rs  permalink.rs  render.rs  site.rs  sitemap.rs  storage.rs  style.rs
crates/razorbill/src/content/: aggregator.rs  collections.rs  file_info.rs  front_matter.rs  page.rs  reading_metrics.rs  repository.rs  section.rs  sorting.rs  taxonomy.rs
crates/razorbill/src/markdown/: shortcodes.rs
crates/razorbill/src/markdown/shortcodes/: grammar.pest  parser.rs
crates/razorbill/src/markdown/snapshots/: razorbill__markdown__shortcodes__tests__shortcodes_with_args.snap  razorbill__markdown__shortcodes__tests__shortcodes_with_no_args.snap
crates/razorbill/src/snapshots/: razorbill__markdown__tests__markdown.snap  razorbill__markdown__tests__markdown_footnotes.snap  razorbill__markdown__tests__markdown_image.snap  razorbill__markdown__tests__markdown_image.snap.new  razorbill__markdown__tests__markdown_link.snap  razorbill__markdown__tests__markdown_list_with_inline_code.snap  razorbill__markdown__tests__markdown_table.snap
examples/blog/: Cargo.toml
examples/blog/content/: about.md
examples/blog/content/about/: this-site.md
examples/blog/content/posts/: hello-world.md  prose.md  year-in-review.md
examples/blog/sass/: prose.scss  style.scss
examples/blog/src/: main.rs
