[workspace]
resolver = "2"
members = ["crates/*", "examples/*"]

[workspace.dependencies]
anyhow = "1.0.78"
auk = { git = "https://github.com/maxdeviant/auk.git", rev = "e0446aa58250f6879f894864963b509d8ee24724" }
clap = "4.4.13"
grass = "0.13.1"
http-body-util = "0.1.0"
hyper = "1.1.0"
hyper-util = "0.1.2"
indexmap = "2.1.0"
indoc = "2.0.4"
insta = "1.34.0"
notify = { version = "6.1.1", default-features = false }
once_cell = "1.19.0"
pretty_assertions = "1.4.0"
pulldown-cmark = { version = "0.9.3", default-features = false }
razorbill = { path = "crates/razorbill" }
regex = "1.10.2"
serde = "1.0.194"
serde_json = "1.0.111"
thiserror = "1.0.56"
tokio = "1.35.1"
toml = "0.8.8"
unicode-segmentation = "1.10.1"
url = "2.5.0"
walkdir = "2.4.0"
ws = "0.9.2"

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
