[package]
name = "razorbill"
version = "0.1.0"
description = "A toolkit for bespoke static site generators."
repository = "https://github.com/maxdeviant/razorbill"
documentation = "https://docs.rs/razorbill"
categories = ["web-programming"]
keywords = ["static-site", "generator", "toolkit"]
authors = ["Marshall Bowers <elliott.codes@gmail.com>"]
license = "MIT"
edition = "2021"

[dependencies]
auk.workspace = true
grass.workspace = true
http-body-util.workspace = true
hyper = { workspace = true, features = ["full"] }
hyper-util = { workspace = true, features = ["full"] }
indexmap.workspace = true
notify = { workspace = true, default-features = false, features = ["macos_kqueue"] }
once_cell.workspace = true
pulldown-cmark.workspace = true
regex.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
toml.workspace = true
url.workspace = true
walkdir.workspace = true
ws.workspace = true

[dev-dependencies]
indoc.workspace = true
